resources/me/chap05/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: catfact.ninja
  ports:
  - port: 80
